# byThePeoples

./: .env  .gitignore  Makefile  depolyment.yml
api/: Cargo.toml
api-server/: .babelrc  .eslintrc  Cargo.toml  package.json
api-server/routes/: users.ts
api/src/: lib.rs  main.rs
api/src/graph_ql/: mod.rs  schema.rs
api/src/graph_ql/models/: playground.rs
api/src/graph_ql/mutations/: playground.rs
api/src/graph_ql/queries/: mod.rs  playground.rs
api/src/routes/: graph_ql.rs  mod.rs
deployments/: development.yml
lib/db/: Cargo.toml
lib/db/src/: client.rs  connection_pool.rs  lib.rs  transaction.rs
lib/mock/: Cargo.toml
services/api/: Cargo.toml
services/api/src/: lib.rs  main.rs
services/api/src/graph_ql/: mod.rs
services/api/src/graph_ql/mutations/: mod.rs  playground.rs
services/api/src/graph_ql/queries/: auth.rs  mod.rs  playground.rs
services/api/src/models/: auth.rs  mod.rs  playground.rs
services/api/src/redis/: mod.rs
services/api/src/routes/: graph_ql.rs  mod.rs  user.rs
services/auth/: Cargo.toml
services/auth/src/: constants.rs  error.rs  lib.rs  main.rs  server.rs
services/auth/src/authentication/: authorization.rs  configuration.rs  jwt.rs  mod.rs  password.rs
services/auth/src/configuration/: connection.rs  database.rs  hash.rs  jwt.rs  mod.rs
services/auth/src/controller/: authorization.rs  credentials.rs  jwt.rs  mod.rs  password.rs
services/auth/src/controller/credentials/: create.rs  delete.rs  mod.rs  update.rs
services/auth/src/controller/password_reset/: mod.rs  request.rs  reset.rs
services/auth/src/handler/: credentials.rs  mod.rs  verification.rs
services/auth/src/handler/credentials/: creation.rs  deletion.rs  mod.rs  updates.rs
services/auth/src/handler/password_reset/: mod.rs  password_reset.rs  request_password_reset.rs  reset_password.rs  reset_request.rs
services/auth/src/model/: auth_request.rs  authentication.rs  credential_request.rs  credentials.rs  failed_login.rs  mod.rs  password_reset.rs  user.rs
services/auth/src/model/request/: credentials.rs  email_auth.rs  full_auth.rs  mod.rs  name_auth.rs  password_reset.rs  update.rs
services/auth/src/model/response/: mod.rs
services/auth/src/repository/: credentials.rs  failed_login.rs  login_history.rs  mod.rs  password_reset.rs
services/auth/src/routes/: auth.rs  credentials.rs  mod.rs  password_reset.rs  verification.rs
services/auth/src/sql/migrations/: 0_auth_schema.sql  auth_credentials_table.sql  auth_table.sql  failed_logins_table.sql  password_reset.sql
services/auth/src/utilities/: constants.rs  hash.rs  jwt.rs  mod.rs  password.rs  test.rs
services/auth/src/utilities/test/: mod.rs
services/auth/src/utilities/test/fake/: credentials.rs  failed_login.rs  mod.rs  request.rs
services/auth/src/utilities/test/mocks/: mod.rs
services/auth/src/utilities/test/mocks/repository/: credentials_mock.rs  login_history_mock.rs  mod.rs  password_reset.rs
services/auth/tests/: create_credentials.rs  delete_credentials.rs  helper.rs  post_credentials.rs  post_reset.rs  put_credentials.rs  put_reset.rs  verification.rs
ui/: tsconfig.json
ui-server/: .babelrc  .eslintrc  package.json
utilities/db/: Cargo.toml
utilities/db/src/: client.rs  configuration.rs  connection.rs  connection_pool.rs  lib.rs  transaction.rs
utilities/db/src/mock/: client.rs  connection_pool.rs  mod.rs  transaction.rs
utilities/db/src/mocks/: client.rs  connection_pool.rs  mod.rs  transaction.rs
(+84 files in other folders)
