[package]
name = "database"
version = "0.1.0"
authors = ["Marcus Ruddick <ruddickmg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
bb8 = "0.4.0"
bb8-postgres = "0.4.0"
environment = { path = "../environment" }
files = { path = "../files" }
futures = "0.3.4"
mocking = { path = "../mocking" }
tokio-postgres = { version="0.5.2", features=["with-chrono-0_4"] }
