[package]
name = "btp-api-server"
version = "0.1.0"
authors = ["Marcus Ruddick <ruddickmg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environment = { path = "../../utilities/environment" }
postgres = "0.15.2"
actix-web = "2.0.0"
actix-rt = "1.0.0"
listenfd = "0.3"
juniper = "0.14.2"
serde = "1.0.104"
serde_json = "1.0.44"
rustls = "0.16.0"
reqwest = "0.10.1"
redis = "0.15.1"

[package.metadata.commands]
watch = "systemfd --no-pid -s http::8080 -- cargo watch -x run"