[package]
name = "btp-auth-server"
version = "0.1.0"
authors = ["Marcus Ruddick <ruddickmg@gmail.com>"]
edition = "2018"

[dependencies]
database = { path = "../../utilities/db" }
environment = { path = "../../utilities/environment" }
rustls = "0.16.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
argonautica = "0.2.0"
listenfd = "0.3"
serde = "1.0.104"
serde_json = "1.0.47"
jsonwebtoken = "7.0.0-alpha.2"

[dev-dependencies]
mockall = "0.6.0"

[package.metadata.commands]
watch = "systemfd --no-pid -s http::8080 -- cargo watch -x run"
