[package]
name = "btp-auth-server"
version = "0.1.0"
authors = ["Marcus Ruddick <ruddickmg@gmail.com>"]
edition = "2018"

[dependencies]
database = { path = "../../lib/db" }
environment = { path = "../../lib/environment" }
status_codes = { path = "../../lib/status_codes" }
mocking = { path = "../../lib/mocking" }
rand = "0.7.3"
ring = "0.16.13"
rust-argon2 = "0.8.2"
rustls = "0.16.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
async-trait = "0.1.30"
argonautica = "0.2.0"
listenfd = "0.3"
serde = "1.0.104"
serde_json = "1.0.47"
jsonwebtoken = "7.0.0-alpha.2"
uuid = "0.8.1"
futures = "0.3.4"
zxcvbn = "2.0.1"

[dev-dependencies]
fake = "2.2.0"

[package.metadata.commands]
watch = "systemfd --no-pid -s http::8080 -- cargo watch -x run"
