[package]
name = "database"
version = "0.1.0"
authors = ["Marcus Ruddick <ruddickmg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
files = { path = "../files" }
mock = { path = "../mock" }
environment = { path = "../environment" }
async-trait = "0.1.24"
futures = "0.3.4"
tokio-postgres = "0.5.2"
bb8-postgres = "0.4.0"
bb8 = "0.4.0"